test/errors/python_error/zs/package_with_module_clashing/package_with_structure_clash_error.zs
package package_with_module_clashing.package_with_structure_clash_error;

import package_with_module_clashing.package_with_structure_clash_error.clashing_name.some_package.*;

struct ClashingName
{
    Empty empty;
};
